# TravelAgent

./: .gitignore  README.md  main.py  pyproject.toml  test.py
Agent/: lc_functioncall.py  lc_react.py
lc_agent/: lc_functioncall.py  lc_react.py
lg_agent/: graph.py  state.py
lg_agent/constants/: city_code.py
lg_agent/nodes/: budget_manage.py  demand_analysis.py  info_fetcher.py  intent_router.py  interrupt_handler.py  persist_result.py  personalized_recommend.py  resource_reservation.py  route_planning.py  update_memory.py
lg_agent/prompts/: prompt.py  prompt_template.py
lg_agent/tools/: attraction_api.py  booking_api.py  budget_calculator.py  emergency_api.py  extract_city.py  extract_city_route.py  init_llm.py  route_api.py  spot_api.py  traffic_api.py  vector_store.py  weather_api.py
lg_agent/utils/: cache.py  redis_client.py
scripts/: excel_to_citycode.py
static/: index.html
